<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite_black_48dp"
            android:title="@string/fav" />
        <!--<item
            android:id="@+id/nav_all_exhibits"
            android:icon="@drawable/ic_account_balance_black_48dp"
            android:title="@string/all_exhibits" />-->
        <!--<item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Настройки" />-->
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_input_black_48dp"
            android:title="@string/exit" />
    </group>

    <item android:title="@string/feedback">
        <menu>
            <item
                android:id="@+id/museum_site"
                android:icon="@drawable/ic_link_black_48dp"
                android:title="@string/museum_url" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_link_black_48dp"
                android:title="@string/market_url" />
        </menu>
    </item>

</menu>
