<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite_black_48dp"
            android:title="@string/fav" />
        <item
            android:id="@+id/nav_all_exhibits"
            android:icon="@drawable/ic_account_balance_black_48dp"
            android:title="@string/all_exhibits" />
        <item
            android:id="@+id/nav_reload"
            android:icon="@drawable/ic_cached_black_48dp"
            android:title="@string/reload" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_input_black_48dp"
            android:title="@string/exit" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
